# rust-embedding-bench

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REPORT.md  run_all.sh
analyze/: compare.py  correctness.py
corpus/: sentences.json
reference/: download_gguf.py  download_qdrant.py  export_onnx.py  generate_reference.py  quantize.py  requirements.txt
runners/candle_runner/: Cargo.toml
runners/candle_runner/src/: main.rs
runners/fastembed_runner/: Cargo.toml
runners/fastembed_runner/src/: main.rs
runners/llama_runner/: Cargo.toml
runners/llama_runner/src/: main.rs
runners/ollama_runner/: Cargo.toml
runners/ollama_runner/src/: main.rs
runners/ort_runner/: Cargo.toml
runners/ort_runner/src/: main.rs
runners/shared/: Cargo.toml
runners/shared/src/: lib.rs
