[workspace]
resolver = "2"
members = [
    "runners/shared",
    "runners/fastembed_runner",
    "runners/candle_runner",
    "runners/ort_runner",
    "runners/ollama_runner",
    "runners/llama_runner",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokenizers = "0.21"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
