[package]
name = "candle_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle_runner"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = "0.4"
