[package]
name = "ollama_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ollama_runner"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
